--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "yannoff/laravel-framework": "^8.65",
+        "yannoff/laravel-framework": "dev-develop",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5"
     },
